@@ -2117,4 +2117,7 @@ Content.alert.notuploaded.quit=quit azureus
 TorrentInfoView.torrent.encoding=Torrent encoding
 TorrentInfoView.columns=Columns from 'My Torrents' view
 
+progress.window.title=Operation In Progress
+progress.window.msg.filemove=Please wait while the file move/rename completes
+
 #PLEASE LEAVE ME AT VERY BOTTOM!
